Avoid the footer crumpling on small devices

--- a/static/css/base_site_layout.css
+++ b/static/css/base_site_layout.css
@@ -34,7 +34,7 @@ body {
 @media only screen and (max-width: 1000px) {
     .base {
         grid-template-columns: 1em auto 1em;
-        font-size: 12px;
+        font-size: 14px;
     }
 }
 
@@ -126,6 +126,11 @@ body {
     display: grid;
     grid-row: 5;
     grid-column: 2;
-    grid-auto-columns: 2;
     border-top: 1px solid var(--site-colour-block);
+}
+
+@media only screen and (max-width: 550px) {
+    .footer {
+        font-size: 2.5vw;
+    }
 }
